# CPP_Hive

./: .gitignore  Acknowledgments and other licenses.txt  CMakeLists.txt  Hive.py  HiveClient.py  HiveClientCPP  Hive_TCP_Client.py  LICENSE  Makefile  Readme.md  Test.py  acknowledgments.txt  includelist.cmake  license.txt  sourcelist.cmake  swig.i  swig_wrap.cxx  swig_wrap.h
hive_client_extensions/cpp/: cmakeExampleForPureCPPCLients.txt  hiveLogic.cpp  hiveLogic.hpp  starter.cpp
hive_client_extensions/python/: HiveLogic.py  Starter.py
include/ai/: HiveLogic.hpp  Logic.hpp  logic.hpp
include/client/: HiveClient.hpp  TCP_Client.hpp  hiveClient.hpp  tcp_Client.hpp
include/communication/: SC_Message.hpp  SC_MessageHandler.hpp  SC_MessageType.hpp  sc_Message.hpp  sc_MessageHandler.hpp  sc_MessageType.hpp
include/hive/: AxialPosition.hpp  Board.hpp  Color.hpp  Direction.hpp  GameState.hpp  Move.hpp  MoveType.hpp  Piece.hpp  PieceColor.hpp  PieceStack.hpp  PieceType.hpp  Player.hpp  PlayerColor.hpp  SlidePath.hpp  SlidePathNode.hpp  axialPosition.hpp  board.hpp  color.hpp  gameState.hpp  globals.hpp  move.hpp  moveType.hpp  neighbourMap.hpp  piece.hpp  pieceStack.hpp  pieceType.hpp  player.hpp
include/hive/benchmark/: benchmark.hpp
include/hive/move/: HiveMove.hpp  MoveType.hpp
include/hive/piece/: GamePiece.hpp  GamePieceStack.hpp
include/hive/player/: HivePlayer.hpp  PlayerColor.hpp
include/util/: XmlStringWriter.hpp  xmlStringWriter.hpp
src/ai/: HiveLogic.cpp  Logic.cpp  logic.cpp
src/client/: HiveClient.cpp  TCP_Client.cpp  hiveClient.cpp  tcp_Client.cpp
src/communication/: SC_Message.cpp  SC_MessageHandler.cpp  sc_Message.cpp  sc_MessageHandler.cpp
src/hive/: AxialPosition.cpp  AxialPosition.hpp  Board.cpp  Board.hpp  Coordinate.cpp  Coordinate.hpp  FieldColor.hpp  FlatPosition.cpp  FlatPosition.hpp  GameState.cpp  GameState.hpp  GamingPiece.hpp  Move.cpp  Piece.cpp  PieceStack.cpp  PieceType.cpp  PieceType.hpp  Player.cpp  Player.hpp  PlayerColor.hpp  SlidePath.cpp  SlidePathNode.cpp  axialPosition.cpp  board.cpp  color.cpp  gameState.cpp  globals.cpp  move.cpp  neighbourMap.cpp  piece.cpp  pieceStack.cpp  pieceType.cpp  player.cpp
src/hive/axialPosition/: AxialPosition.cpp  AxialPosition.hpp
src/hive/benchmark/: benchmark.cpp
src/hive/board/: Board.cpp  Board.hpp
src/hive/gameState/: GameState.cpp  (+1 more)
src/main/: Main.cpp  main.cpp
src/starter/: Starter.cpp  starter.cpp
src/util/: RandomNumberGenerator.cpp  RandomNumberGenerator.hpp
(+17 files in other folders)
